--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,3 +64,21 @@ name = "day5_2"
 path = "src/bin/day5/2.rs"
 test = false
 bench = false
+
+[[bin]]
+name = "day6_1"
+path = "src/bin/day6/1.rs"
+test = false
+bench = false
+
+[[bin]]
+name = "day6_2"
+path = "src/bin/day6/2.rs"
+test = false
+bench = false
+
+[[bin]]
+name = "day7"
+path = "src/bin/day7/day7.rs"
+test = false
+bench = false
